--- a/src/components/atoms/Grid/style.css
+++ b/src/components/atoms/Grid/style.css
@@ -263,3 +263,384 @@
 .grid.wrap--wrap-reverse {
     flex-wrap: wrap-reverse;
 }
+
+
+/* xs */
+@media (min-width: 0px) {
+    .grid.xs--auto {
+        flex: 0 0 auto;
+    }
+
+    .grid.xs--none {
+        display: none;
+    }
+
+    .grid.xs--true {
+        flex: 1 1 0%;
+        max-width: 100%;
+    }
+
+    .grid.xs--1 {
+        flex: 0 0 8.3333333333%;
+        max-width: 8.3333333333%;
+    }
+
+    .grid.xs--2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+
+    .grid.xs--3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .grid.xs--4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .grid.xs--5 {
+        flex: 0 0 41.6666666667%;
+        max-width: 41.6666666667%;
+    }
+
+    .grid.xs--6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .grid.xs--7 {
+        flex: 0 0 58.3333333333%;
+        max-width: 58.3333333333%;
+    }
+
+    .grid.xs--8 {
+        flex: 0 0 66.6666666667%;
+        max-width: 66.6666666667%;
+    }
+
+    .grid.xs--9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .grid.xs--10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
+
+    .grid.xs--11 {
+        flex: 0 0 91.6666666667%;
+        max-width: 91.6666666667%;
+    }
+
+    .grid.xs--12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+/* sm */
+@media (min-width: 600px) {
+    .grid.sm--auto {
+        flex: 0 0 auto;
+    }
+
+    .grid.sm--none {
+        display: none;
+    }
+
+    .grid.sm--true {
+        flex: 1 1 0%;
+        max-width: 100%;
+    }
+
+    .grid.sm--1 {
+        flex: 0 0 8.3333333333%;
+        max-width: 8.3333333333%;
+    }
+
+    .grid.sm--2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+
+    .grid.sm--3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .grid.sm--4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .grid.sm--5 {
+        flex: 0 0 41.6666666667%;
+        max-width: 41.6666666667%;
+    }
+
+    .grid.sm--6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .grid.sm--7 {
+        flex: 0 0 58.3333333333%;
+        max-width: 58.3333333333%;
+    }
+
+    .grid.sm--8 {
+        flex: 0 0 66.6666666667%;
+        max-width: 66.6666666667%;
+    }
+
+    .grid.sm--9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .grid.sm--10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
+
+    .grid.sm--11 {
+        flex: 0 0 91.6666666667%;
+        max-width: 91.6666666667%;
+    }
+
+    .grid.sm--12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+/* md */
+@media (min-width: 900px) {
+    .grid.md--auto {
+        flex: 0 0 auto;
+    }
+
+    .grid.md--none {
+        display: none;
+    }
+
+    .grid.md--true {
+        flex: 1 1 0%;
+        max-width: 100%;
+    }
+
+    .grid.md--1 {
+        flex: 0 0 8.3333333333%;
+        max-width: 8.3333333333%;
+    }
+
+    .grid.md--2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+
+    .grid.md--3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .grid.md--4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .grid.md--5 {
+        flex: 0 0 41.6666666667%;
+        max-width: 41.6666666667%;
+    }
+
+    .grid.md--6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .grid.md--7 {
+        flex: 0 0 58.3333333333%;
+        max-width: 58.3333333333%;
+    }
+
+    .grid.md--8 {
+        flex: 0 0 66.6666666667%;
+        max-width: 66.6666666667%;
+    }
+
+    .grid.md--9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .grid.md--10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
+
+    .grid.md--11 {
+        flex: 0 0 91.6666666667%;
+        max-width: 91.6666666667%;
+    }
+
+    .grid.md--12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+/* lg */
+@media (min-width: 1200px) {
+    .grid.lg--auto {
+        flex: 0 0 auto;
+    }
+
+    .grid.lg--none {
+        display: none;
+    }
+
+    .grid.lg--true {
+        flex: 1 1 0%;
+        max-width: 100%;
+    }
+
+    .grid.lg--1 {
+        flex: 0 0 8.3333333333%;
+        max-width: 8.3333333333%;
+    }
+
+    .grid.lg--2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+
+    .grid.lg--3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .grid.lg--4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .grid.lg--5 {
+        flex: 0 0 41.6666666667%;
+        max-width: 41.6666666667%;
+    }
+
+    .grid.lg--6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .grid.lg--7 {
+        flex: 0 0 58.3333333333%;
+        max-width: 58.3333333333%;
+    }
+
+    .grid.lg--8 {
+        flex: 0 0 66.6666666667%;
+        max-width: 66.6666666667%;
+    }
+
+    .grid.lg--9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .grid.lg--10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
+
+    .grid.lg--11 {
+        flex: 0 0 91.6666666667%;
+        max-width: 91.6666666667%;
+    }
+
+    .grid.lg--12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+/* xl */
+@media (min-width: 1536px) {
+    .grid.xl--auto {
+        flex: 0 0 auto;
+    }
+
+    .grid.xl--none {
+        display: none;
+    }
+
+    .grid.xl--true {
+        flex: 1 1 0%;
+        max-width: 100%;
+    }
+
+    .grid.xl--1 {
+        flex: 0 0 8.3333333333%;
+        max-width: 8.3333333333%;
+    }
+
+    .grid.xl--2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+
+    .grid.xl--3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .grid.xl--4 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%;
+    }
+
+    .grid.xl--5 {
+        flex: 0 0 41.6666666667%;
+        max-width: 41.6666666667%;
+    }
+
+    .grid.xl--6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .grid.xl--7 {
+        flex: 0 0 58.3333333333%;
+        max-width: 58.3333333333%;
+    }
+
+    .grid.xl--8 {
+        flex: 0 0 66.6666666667%;
+        max-width: 66.6666666667%;
+    }
+
+    .grid.xl--9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .grid.xl--10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
+
+    .grid.xl--11 {
+        flex: 0 0 91.6666666667%;
+        max-width: 91.6666666667%;
+    }
+
+    .grid.xl--12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
