--- a/src/components/atoms/SpeedDialIcon/styles.css
+++ b/src/components/atoms/SpeedDialIcon/styles.css
@@ -1,75 +1,37 @@
-.speedDialIcon {
-    -webkit-font-smoothing: antialiased;
-    text-size-adjust: 100%;
-    color-scheme: dark;
-    --MuiDocs-header-height: 64px;
-    --MuiDocs-navDrawer-width: 300px;
-    --MuiDocs-toc-width: 240px;
-    --docsearch-icon-stroke-width: 1.4;
-    --docsearch-highlight-color: var(--docsearch-primary-color);
-    --docsearch-container-background: rgba(101,108,133,0.8);
-    --docsearch-modal-width: 560px;
-    --docsearch-modal-height: 600px;
-    --docsearch-modal-shadow: inset 1px 1px 0 0 hsla(0,0%,100%,0.5),0 3px 8px 0 #555a64;
-    --docsearch-searchbox-height: 56px;
-    --docsearch-searchbox-background: #ebedf0;
-    --docsearch-hit-height: 56px;
-    --docsearch-hit-color: #444950;
-    --docsearch-hit-background: #fff;
-    --docsearch-key-gradient: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
-    --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
-    --docsearch-footer-height: 40px;
-    --docsearch-primary-color: #5090D3;
-    --docsearch-text-color: #fff;
-    --docsearch-muted-color: #6F7E8C;
-    --docsearch-searchbox-shadow: 0;
-    --docsearch-hit-shadow: 0;
-    --docsearch-footer-shadow: 0;
-    --docsearch-spacing: 12px;
-    --docsearch-hit-active-color: #66B2FF;
-    --docsearch-logo-color: #6F7E8C;
-    --docsearch-searchbox-focus-background: unset;
-    --docsearch-footer-background: unset;
-    --docsearch-modal-background: #0A1929;
-    --google-font-color-materialiconstwotone: none;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    outline: 0px;
-    border: 0px;
-    margin: 0px;
-    cursor: pointer;
-    user-select: none;
-    vertical-align: middle;
-    appearance: none;
-    text-decoration: none;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    font-size: 0.875rem;
-    line-height: 1.75;
-    letter-spacing: 0.02857em;
-    text-transform: uppercase;
-    min-height: 36px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    border-radius: 50%;
-    padding: 0px;
-    min-width: 0px;
-    width: 56px;
-    height: 56px;
-    z-index: 1050;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 6px 10px 0px, rgba(0, 0, 0, 0.12) 0px 1px 18px 0px;
-    color: rgba(0, 0, 0, 0.87);
-    background-color: rgb(144, 202, 249);
-    pointer-events: auto;
+.speedDialAction {
 
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    place-content: center;
 }
 
-.speedDialIcon {
-    transform: none;
-    transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+transition-out{
+    animation:fade-out 1s both;
+}
+
+
+transition-in{
+    animation:fade-in 1s both;
+}
+
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
