--- a/src/components/molecules/SpeedDial/styles.css
+++ b/src/components/molecules/SpeedDial/styles.css
@@ -1,60 +1,50 @@
 
-.scale-in-center {
-    -webkit-animation: scale-in-center 0.6s both;
-    animation: scale-in-center 0.6s both;
+
+.rotate-icon:not(:hover) {
+    animation: rotate-center-leave 0.2s linear;
 }
 
-.scale-out-center {
-    -webkit-animation: scale-out-center 0.5s both;
-    animation: scale-out-center 0.5s both;
+.rotate-icon:hover {
+    animation: rotate-center 0.2s linear;
 }
 
-@-webkit-keyframes scale-in-center {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
-}
 @keyframes scale-in-center {
     0% {
-        -webkit-transform: scale(0);
         transform: scale(0);
         opacity: 1;
     }
     100% {
-        -webkit-transform: scale(1);
         transform: scale(1);
         opacity: 1;
     }
 }
 
-@-webkit-keyframes scale-out-center {
+
+@keyframes scale-out-center {
     0% {
-        -webkit-transform: scale(1);
         transform: scale(1);
         opacity: 1;
     }
     100% {
-        -webkit-transform: scale(0);
         transform: scale(0);
         opacity: 1;
     }
 }
-@keyframes scale-out-center {
+
+@keyframes rotate-center {
     0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
+        transform: rotate(0);
     }
     100% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 1;
+        transform: rotate(45deg);
+    }
+}
+
+@keyframes rotate-center-leave {
+    0% {
+        transform: rotate(45deg);
+    }
+    100% {
+        transform: rotate(0deg);
     }
 }
