--- a/src/components/atoms/SpeedDialIcon/styles.css
+++ b/src/components/atoms/SpeedDialIcon/styles.css
@@ -7,14 +7,25 @@
     align-items: center;
     display: grid;
     place-content: center;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.6s ease-in-out;
+}
+
+
+.speedDialAction-component-visible {
+    scale: 1;
+    opacity: 1;
+}
+.speedDialAction-component-hidden {
+    scale: 0;
+    opacity: 0;
 }
 
 .icon {
-    transition: all 0.3s ease-in-out;
+    transition: all 0.4s ease-in-out;
     display: inline;
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 .icon-rotate {
@@ -26,13 +37,16 @@
 }
 
 .icon-hide {
-    display: none;
+    visibility: hidden;
+    width:0;
+    height: 0;
     opacity: 0;
     scale: 0;
 
 }
 
 .icon-show {
+    visibility: visible;
     opacity: 1;
     scale: 1;
 }
