--- a/src/components/molecules/SpeedDial/styles.css
+++ b/src/components/molecules/SpeedDial/styles.css
@@ -9,3 +9,28 @@
 }
 
 
+.speedDial-component-visible {
+    scale: 1;
+    opacity: 1;
+}
+
+
+.speedDial-component-hidden {
+    scale: 0;
+    opacity: 0;
+}
+.speedDial-component {
+    transition: all 0.6s ease-in-out;
+}
+.speedDial-animation-loading-icon {
+    animation: both 0.6s spin-anim infinite;
+    stroke-width: 3em;
+}
+@keyframes spin-anim {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
