--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(63, 63, 63);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.front {
+  z-index: 100;
+}
+
+.back {
+  z-index: -100;
+}
+
+#website {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  display: block;
+  text-align: center;
 }
