feat: add 100 height for body

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+html, body, #app, #app>div, #root {
+  height: 100%
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
