--- a/src/components/atoms/Card/style.css
+++ b/src/components/atoms/Card/style.css
@@ -1,8 +1,12 @@
 .card {
     height:auto;
     padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+    /* box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;s */
   }
+  .cardContent{
+    
+  }
+
   
   
   .shadow--1 {box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;}
