--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   margin: 2vw;
 }
 
-.studentList {
+.list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -26,7 +26,7 @@ code {
 }
 
 @media screen and (max-width: 700px) {
-  .studentList {
+  .list {
     display: flex;
     flex-direction: column;
   }
