--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -1,5 +1,5 @@
 @import "global/base";
 @import "global/body";
 @import "global/mixins";
-@import "components/product";
-@import "components/hero";
+@import "components/product.scss";
+@import "components/hero.scss";
