--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -11,14 +11,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 0;
 }
 
 .button.filter{
-    background-color: #D9D9D9;
+    background-color: #D9D9D900;
     border-radius: 20px;
     height: 30px;
     width: 100px;
     margin: auto;
+}
+.button.filter.active{
+    background-color: #D9D9D9;
 }
 
 .search-bar{
